--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -78,7 +78,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'moviles' ? 'Móviles' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %>
+                                                <%= producto.nombre %><%= producto.nombre %><%= producto.ram %> + <%= producto.almacenamiento %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -100,8 +100,9 @@ document.querySelector(".tablink").click();
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
                                                 data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span></button>
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"
+                                                data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
+                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span></button>
                                                  
                                                 <% if (producto.esMovil) { %>
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
@@ -114,7 +115,8 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
+                                        data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                         <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>                             
@@ -146,7 +148,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'smarttv' ? 'SmartTV' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %>
+                                                <%= producto.nombre %><%= producto.ram %> + <%= producto.almacenamiento %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -168,8 +170,9 @@ document.querySelector(".tablink").click();
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
                                                 data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span></button>
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>" 
+                                                data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
+                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span></button>
 
                                                 <% if (producto.esMovil) { %>
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
@@ -182,7 +185,8 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
+                                        data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                         <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
@@ -237,8 +241,9 @@ document.querySelector(".tablink").click();
 
                                             <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
                                                 data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span></button>
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"
+                                                data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
+                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span></button>
                                                 
                                                 <% if (producto.esMovil) { %>
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
@@ -251,7 +256,8 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
+                                        data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                         <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
@@ -305,8 +311,9 @@ document.querySelector(".tablink").click();
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>" 
                                                 data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span></button>
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"
+                                                data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
+                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span></button>
 
                                                 <% if (producto.esMovil) { %>
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
@@ -318,7 +325,8 @@ document.querySelector(".tablink").click();
                                     </div>
                                     <div class="add-to-cart">
                                         <button class="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" 
-                                            data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                            data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
+                                            data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                             <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
@@ -350,7 +358,7 @@ document.querySelector(".tablink").click();
                                             <%= producto.categoria === 'tablets' ? 'Tablets' : producto.categoria.charAt(0).toUpperCase() + producto.categoria.slice(1) %>
                                         </p>
                                         <h3 class="product-name">
-                                                <%= producto.nombre %>
+                                                <%= producto.nombre %><%= producto.nombre %><%= producto.ram %><%= producto.almacenamiento %>
                                             </h3>
                                             <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
@@ -372,8 +380,9 @@ document.querySelector(".tablink").click();
                                         <div class="product-btns">
                                             <button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>"
                                                 data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>">
-                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span></button>
+                                                data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"
+                                                data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
+                                                <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span></button>
 
                                                 <% if (producto.esMovil) { %>
                                                 <button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
@@ -386,7 +395,8 @@ document.querySelector(".tablink").click();
                                     <div class="add-to-cart">
                                         <button class="add-to-cart-btn"
                                         data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                        data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
+                                        data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                         <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                         </button>
                                     </div>
@@ -479,8 +489,9 @@ document.querySelector(".tablink").click();
                                                 <%= producto.categoria || 'Sin categoría' %>
                                             </p>
                                             <h3 class="product-name">
-                                                <%= producto.nombre %>
-                                             </h3>
+                                                <%= producto.nombre %> <%= producto.ram %> + <%= producto.almacenamiento %>
+                                            </h3>
+
                                              <h4 class="product-price">
                                                 $<%= Number(producto.precio * (1 - producto.descuento / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
                                                 <% if (producto.descuento> 0) { %>
@@ -502,8 +513,9 @@ document.querySelector(".tablink").click();
                                                     <div class="product-btns">
                                                         <button class="add-to-wishlist" data-product-id="<%= producto.id %>"data-product-name="<%= producto.nombre %>" 
                                                             data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-                                                            data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"> 
-                                                            <i class="fa-regular fa-heart"></i> <span class="tooltipp">Lista de deseo</span>
+                                                            data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>" 
+                                                            data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>"> 
+                                                            <i class="fa-regular fa-heart"></i> <span class="tooltipp">Favoritos</span>
                                                         </button>
                                                         
                                                         <% if (producto.esMovil) { %>
@@ -516,7 +528,8 @@ document.querySelector(".tablink").click();
                                                 </div>
                                                 <div class="add-to-cart">
                                                     <button class="add-to-cart-btn" data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>"
-                                                        data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>">
+                                                        data-color="<%= producto.color %>" data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" 
+                                                        data-imagen="<%= producto.imagen %>" data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
                                                         <i class="fa fa-shopping-cart"></i> Añadir al carrito
                                                     </button>
                                                 </div>
