--- a/src/views/admin/accounts.ejs
+++ b/src/views/admin/accounts.ejs
@@ -64,6 +64,15 @@
         <input type="password" id="confirmPassword" name="confirmPassword">
         <div class="error-text" data-error-for="confirmPassword"></div>
       </div>
+      <div class="form-group">
+      <label for="rol">Rol:</label>
+      <select id="rol" name="rol">
+        <option value="superadmin">Superadmin</option>
+        <option value="editor">Editor</option>
+        <option value="soporte">Soporte</option>
+      </select>
+      <div class="error-text" data-error-for="rol"></div>
+    </div>
       <div class="modal-buttons">
         <button type="button" id="cancelModalBtn" class="cancel-button">
           Cancelar
