--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -57,7 +57,8 @@
             <input type="hidden" id="deviceId">
             <div class="form-group">
                 <label for="searchMobileInput">Buscar Móvil:</label>
-                <input type="text" id="searchMobileInput" autocomplete="off" placeholder="Busca un móvil para asignar">
+                <input type="text" id="searchMobileInput" name="productIds" autocomplete="off" placeholder="Busca un móvil para asignar">
+                <div class="error-text" data-error-for="productIds"></div>
                 <div id="suggestionsMobile" class="suggestions-list"></div>
             </div>
             <div class="form-group">
@@ -66,37 +67,44 @@
             </div>
             <div class="form-group">
                 <label for="deviceCpu">CPU:</label>
-                <input type="text" id="deviceCpu" name="cpu" autocomplete="off">
+                <input type="text" id="deviceCpu" name="cpu_id" autocomplete="off">
+                <div class="error-text" data-error-for="cpu_id"></div>
                 <div id="suggestionsCpu" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceGpu">GPU:</label>
-                <input type="text" id="deviceGpu" name="gpu" autocomplete="off">
+                <input type="text" id="deviceGpu" name="gpu_id" autocomplete="off">
+                <div class="error-text" data-error-for="gpu_id"></div>
                 <div id="suggestionsGpu" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceScreen">Pantalla:</label>
-                <input type="text" id="deviceScreen" name="pantalla" autocomplete="off">
+                <input type="text" id="deviceScreen" name="pantalla_id" autocomplete="off">
+                <div class="error-text" data-error-for="pantalla_id"></div>
                 <div id="suggestionsScreen" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceCamera">Cámara:</label>
-                <input type="text" id="deviceCamera" name="camara" autocomplete="off">
+                <input type="text" id="deviceCamera" name="camara_id" autocomplete="off">
+                <div class="error-text" data-error-for="camara_id"></div>
                 <div id="suggestionsCamera" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceBattery">Batería:</label>
-                <input type="text" id="deviceBattery" name="bateria" autocomplete="off">
+                <input type="text" id="deviceBattery" name="bateria_id" autocomplete="off">
+                <div class="error-text" data-error-for="bateria_id"></div>
                 <div id="suggestionsBattery" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceConnectivity">Conectividad:</label>
-                <input type="text" id="deviceConnectivity" name="conectividad" autocomplete="off">
+                <input type="text" id="deviceConnectivity" name="conectividad_id" autocomplete="off">
+                <div class="error-text" data-error-for="conectividad_id"></div>
                 <div id="suggestionsConnectivity" class="suggestions-list"></div>
             </div>
             <div class="form-group">
                 <label for="deviceSizeWeight">Dimensiones/Peso:</label>
-                <input type="text" id="deviceSizeWeight" name="dimensionespeso" autocomplete="off">
+                <input type="text" id="deviceSizeWeight" name="dimensionespeso_id" autocomplete="off">
+                <div class="error-text" data-error-for="dimensionespeso_id"></div>
                 <div id="suggestionsSizeWeight" class="suggestions-list"></div>
             </div>
             <div class="modal-buttons">
