--- a/src/views/store/orderDetails.ejs
+++ b/src/views/store/orderDetails.ejs
@@ -23,7 +23,7 @@
                         <p class="Information-details">
                             <%= order.nombre %> <%= order.apellido %><br>
                             <%= order.direccion %><br>
-                            <%= order.ciudad %>, <%= order.distrito %><br>
+                            <%= order.nombre_ciudad_envio %>, <%= order.distrito %><br>
                             Teléfono: <%= order.telefono %>
                         </p>
                     </div>
