--- a/public/css/account.css
+++ b/public/css/account.css
@@ -45,7 +45,7 @@
 }
 
 .editar, .reenviar, .cancelar, .guardar {
-  background-image: linear-gradient(-180deg, #ff4e50, #c41411);
+  background-image: linear-gradient(-180deg, #6da7dd, #4f86c6); 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   color: #fff;
   border: none;
@@ -59,7 +59,7 @@
 }
 
 .editar:hover, .reenviar:hover, .cancelar:hover, .guardar:hover {
-  box-shadow: 0 3px 8px rgba(200, 30, 0, 0.5);
+  box-shadow: 0 3px 8px rgba(79, 134, 198, 0.5);
 }
 
 .modal-container {
