--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -202,14 +202,16 @@
 															<% } %>
 															</div>
 															<div class="product-btns">
-																<button class="add-to-wishlist" data-product-id="<%= producto.id %>" data-product-name="<%= producto.nombre %>"
-																	data-product-price="<%= producto.precio %>" data-product-discount="<%= producto.descuento || 0 %>"
-																	data-product-image="<%= producto.imagen %>" data-product-color="<%= producto.color %>"
-																	data-product-almacenamiento="<%= producto.almacenamiento %>" data-product-ram="<%= producto.ram %>">
-																	<i class="fa fa-heart-o"></i> <span class="tooltipp">Favoritos</span></button>
+																<button class="add-to-wishlist" 
+																	data-product-id="<%= producto.id %>" 
+																	data-product-color="<%= producto.color %>">
+																	<i class="fa-regular fa-heart"></i>
+																	<span class="tooltipp">Favoritos</span>
+																</button>
 																	
 																	<% if (producto.esMovil) { %>
-																	<button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
+																	<button class="add-to-compare" data-id="<%= producto.id %>">
+																		<i class="fa-solid fa-arrow-right-arrow-left"></i>
 																	<span class="tooltipp">Comparar</span></button>
 																	<% } %>
 
@@ -219,10 +221,15 @@
 															</div>
 														</div>
 														<div class="add-to-cart">
-															<button class="add-to-cart-btn"
-															data-id="<%= producto.id %>" data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>" data-color="<%= producto.color %>"
-															data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>" data-imagen="<%= producto.imagen %>" 
-															data-almacenamiento="<%= producto.almacenamiento %>" data-ram="<%= producto.ram %>">
+														<button class="add-to-cart-btn"
+															data-id="<%= producto.id %>"
+															data-color="<%= producto.color %>"
+															data-ram="<%= producto.ram %>"
+															data-almacenamiento="<%= producto.almacenamiento %>"
+															data-stock="<%= producto.stock %>"
+															data-nombre="<%= producto.nombre %>"
+															data-precio="<%= producto.precio %>"
+															data-imagen="<%= producto.imagen %>">
 															<i class="fa fa-shopping-cart"></i> Añadir al carrito
 														</button>
 													</div>
